# foxconn-ipmi-oem

./: .clang-tidy  CMakeLists.txt  CMakeLists.txt.in  MAINTAINERS  OWNERS  README.md  generate-whitelist.py  groups  ipmi-whitelist.conf  meson.build  project.config
include/: bioscommands.hpp  bioshelper.hpp  common.hpp  file_handling.hpp  systemcommands.hpp
src/: bioscommands.cpp  file_handling.cpp  systemcommands.cpp
